--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
         <link rel="stylesheet" href="./reset.css">
         <link rel="stylesheet" href="./styles.css">
+        <link rel="stylesheet" href="./responsive.css">
 
     </head>
     <body>
@@ -176,7 +177,7 @@
                 <img class="sbt-icon" src="./images/sbt-icon.webp" alt="Logo do Canal de Televisão Brasileiro SBT">
                 <p class="media-phrase-paragraph">
                     <a class="media-phrase-link" target="_blank" href="https://www.sbt.com.br/variedades/sbt-games/fiquepordentro/151865-cellbit-cria-rpg-de-terror-e-arrecada-mais-de-r-15-milhao">
-                        "Cellbit cria RPG de terror e arrecada mais de R$ 1,5 milhão"
+                        <em>"Cellbit cria RPG de terror e arrecada mais de R$ 1,5 milhão"</em>
                     </a>
                     <br><br><br>SBT
                 </p>
@@ -369,7 +370,6 @@
 
             <section class="subscribe section" id="subscribe-section">
                 <article class="subscribe-article">
-              
                     <div class="subscribe-text-div">
                         <h2 class="section-title title-subscribe-section">Inscreva-se para Novidades</h2>
                         <p class="subscribe-paragraph paragraph">
@@ -427,6 +427,5 @@
                 </li>
             </ul>
         </footer>
-
     </body>
 </html>
