responsivo por favor funcione

--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@
                             atualizações, conteúdos exclusivos, ofertas e mais, por e-mail.
                         </p>
                     </div>
-                    <form class="subscribe-email-form">
+                    <form class="subscribe-email-form" action="#">
                         <input class="email-field-input" type="email" name="subscribe-email" id="subscribe-email" placeholder="Seu melhor e-mail" required>
                         <div class="checkbox-input-and-label">
                             <input class="checkbox-input" type="checkbox" name="email-register" id="email-register" required>
