--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
                     <li class="navigation-list-item">
                         <a class="navigation-link link-home-page" href="#subscribe-section">Inscreva-se</a></li>
                     <li class="navigation-list-item">
-                        <a class="navigation-link" href="https://ordemparanormal.fandom.com/wiki/Ordem_Paranormal_Wiki">Wiki</a></li>
+                        <a class="navigation-link" href="https://ordemparanormal.fandom.com/wiki/Ordem_Paranormal_Wiki" target="_blank">Wiki</a></li>
                     <li class="navigation-list-item">
-                        <a class="navigation-link" href="https://lolja.com.br/parceiros/ordem-cellbit/">Loja</a></li>
+                        <a class="navigation-link" href="https://lolja.com.br/parceiros/ordem-cellbit/" target="_blank">Loja</a></li>
                     <li class="navigation-list-item">
                         <a class="navigation-link" href="#">Contato</a></li>
                     <li class="navigation-list-item">
